@@ -12,6 +12,8 @@ Bug fixes:
 - Main view redirect to last view now preserves portal_status_message.
 - All the IDate objects now have a getCalendarUrl method, mainly used
   for actions in CMF that should only be done on the calendar.
+- The getEvents with periods less than one day still had bugs in the handling
+  of recurring events.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
